# nonebot-adapter-kaiheila

./: .gitignore  LICENSE  MANUAL.md  README.md  bot.py  pyproject.toml  记录.ipynb
.github/workflows/: python-publish.yml
kaiheila/v11/: __init__.py  adapter.py  api.py  bot.py  config.py  event.py  exception.py  message.py  permission.py  utils.py
nonebot/adapters/kaiheila/: __init__.py  adapter.py  bot.py  config.py  event.py  exception.py  kmd.py  message.py  permission.py  utils.py
nonebot/adapters/kaiheila/api/: __init__.py  client.py  client.pyi  handle.py  model.py  request.py
nonebot/adapters/kaiheila/v3/: config.py
nonebot/kaiheila/: __init__.py
nonebot/kaiheila/v3/: __init__.py  adapter.py  api.py  bot.py  message.py  permission.py
