[tool.poetry]
name = "nonebot-adapter-kaiheila"
version = "0.2.4"
description = "kaiheila adapter for nonebot2"
authors = ["Tian-que <1605206150@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tian-que/nonebot-adapter-kaiheila"
keywords = ["bot", "khl", "kaiheila", "khlbot"]

packages = [
  { include = "nonebot" }
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
deprecated = "^1.2.13"
nonebot2 = "^2.0.0rc1"

#[[tool.poetry.source]]
#name = "aliyun"
#url = "https://mirrors.aliyun.com/pypi/simple/"
#default = true

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
