[tool.poetry]
name = "nonebot-adapter-kaiheila"
version = "0.2.11"
description = "kaiheila adapter for nonebot2"
authors = ["Tian-que <1605206150@qq.com>", "ssttkkl <huang.wen.long@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tian-que/nonebot-adapter-kaiheila"
keywords = ["bot", "khl", "kaiheila", "khlbot"]

packages = [
  { include = "nonebot" }
]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"

#[[tool.poetry.source]]
#name = "aliyun"
#url = "https://mirrors.aliyun.com/pypi/simple/"
#default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
