[tool.poetry]
name = "nonebot-adapter-kaiheila"
version = "0.3.3"
description = "kaiheila adapter for nonebot2"
authors = ["Tian-que <1605206150@qq.com>", "ssttkkl <huang.wen.long@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tian-que/nonebot-adapter-kaiheila"
keywords = ["bot", "khl", "kaiheila", "khlbot"]

packages = [
  { include = "nonebot" }
]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.0"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.1.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "E402", "F403", "T201"]

line-length = 160
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

#[[tool.poetry.source]]
#name = "aliyun"
#url = "https://mirrors.aliyun.com/pypi/simple/"
#default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
